Dev/src/PS Enterprise/objects/VersionItem_EstimatesVsActuals__c.object
<CustomObject>
    <customHelpPage>VersionHelp</customHelpPage>
    <description>A capture of estimates vs actuals taken at the time the version is created.</description>
    <fields>
        <fullName>Actual_Days__c</fullName>
        <description>The actual days for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The actual days for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Actual Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <description>The actual hours for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The actual hours for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignmentId__c</fullName>
        <description>The assignment ID for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The assignment ID for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Assignment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentName__c</fullName>
        <description>The assignment name for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The assignment name for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Assignment Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The end date for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Days__c</fullName>
        <description>The estimated days for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The estimated days for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Estimated Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <description>The estimated hours for estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The estimated hours for estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatesVsActualsName__c</fullName>
        <description>The estimates vs actuals name referenced in the version.</description>
        <inlineHelpText>The estimates vs actuals name referenced in the version.</inlineHelpText>
        <label>Estimates Vs Actuals Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedById__c</fullName>
        <description>The original created by ID on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original created by ID on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedByName__c</fullName>
        <description>The original created by name on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original created by name on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedDate__c</fullName>
        <description>The original created date for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original created date for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalId__c</fullName>
        <description>The original ID of the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original ID of the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedById__c</fullName>
        <description>The original last modified by ID on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original last modified by ID on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedByName__c</fullName>
        <description>The original last modified by name on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original last modified by name on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original last modified date of the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalOwnerId__c</fullName>
        <description>The original owner ID on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original owner ID on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOwnerName__c</fullName>
        <description>The original owner name on the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The original owner name on the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceId__c</fullName>
        <description>The resource ID for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The resource ID for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Resource Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceName__c</fullName>
        <description>The resource name for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The resource name for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Resource Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The start date for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimePeriodId__c</fullName>
        <description>The time period ID for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The time period ID for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Time Period Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimePeriodName__c</fullName>
        <description>The time period name for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The time period name for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Time Period Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period_Type__c</fullName>
        <description>The time period type for the estimates vs actuals referenced in the version.</description>
        <inlineHelpText>The time period type for the estimates vs actuals referenced in the version.</inlineHelpText>
        <label>Time Period Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>A lookup to the version.</description>
        <inlineHelpText>A lookup to the version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Version Item Estimates Vs Actuals</relationshipLabel>
        <relationshipName>VersionItem_EstimatesVsActuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Estimates Vs Actuals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVEA-{0000}</displayFormat>
        <label>Version Item Estimates Vs Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Estimates Vs Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>